# alrajhi-sql-tui

./: .env.example  .gitignore  Cargo.toml  README.md  atui  setup.sh
src/: lib.rs  main.rs
src/app/: handlers.rs  history.rs  mod.rs  state.rs
src/db/: connection.rs  mod.rs  query.rs  schema.rs
src/ui/: layout.rs  mod.rs  theme.rs  widgets.rs
src/utils/: mod.rs
